# coursemap

./: .bumpversion.toml  .gitignore  CHANGELOG.md  Makefile  PUBLISHING.md  README.md  USAGE.md  config.yml
.github/workflows/: test.yml
core/: Cargo.toml  config.rs  lib.rs
coursemap-py/: .bumpversion.toml  CHANGELOG.md  Cargo.toml  pyproject.toml
coursemap-py/course_map/: __init__.py
coursemap-py/python/coursemap/: __init__.py
coursemap-py/src/: lib.rs
coursemap-r/: .Rbuildignore  .bumpversion.toml  CHANGELOG.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  configure  configure.win  configure_common.sh
coursemap-r/R/: coursemap.R  extendr-wrappers.R
coursemap-r/man/: coursemap-package.Rd  coursemap.Rd  generate_course_map.Rd  generate_inline_svg.Rd  get_config.Rd  graphviz_available.Rd  graphviz_info.Rd  is_knitr_running.Rd  is_rstudio_running.Rd  is_testing.Rd  parse_documents.Rd  plot.coursemap.Rd  print.coursemap.Rd  write_map.Rd
coursemap-r/src/: Makevars.in  Makevars.win.in  coursemap-win.def  entrypoint.c
coursemap-r/src/rust/: Cargo.toml
coursemap-r/src/rust/src/: lib.rs
coursemap-r/tests/: testthat.R
coursemap-r/tests/testthat/: test-coursemap.R
coursemap-r/tools/: config.R
coursemap-rs/: Cargo.toml
coursemap-rs/src/: cli.rs  graph.rs  lib.rs  main.rs  parser.rs  renderer.rs
test_docs/: advanced_topics.qmd  intro.qmd  microeconomics.qmd
