[package]
name = "coursemap-core"
version = "0.1.1"
edition = "2021"
description = "Core library for course dependency visualization"
authors = ["Kenji Sato <mail@kenjisato.jp>"]
license = "MIT"
repository = "https://github.com/kenjisato/coursemap"

[lib]
name = "coursemap_core"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
gray_matter = "0.2"
petgraph = "0.6"
anyhow = "1.0"
walkdir = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
