[package]
name = "course-map-python"
version = "0.1.2"
edition = "2021"
description = "Python bindings for course-map"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "course_map_rs"
crate-type = ["cdylib"]

[dependencies]
coursemap-core = { path = "../core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
tempfile = "3.0"

[features]
default = []
