[package]
name = "coursemap"
version = "0.1.0"
edition = "2021"
description = "A tool to visualize course dependencies from Quarto/Markdown documents"
authors = ["Kenji Sato <mail@kenjisato.jp>"]
license = "MIT"
repository = "https://github.com/kenjisato/coursemap"
homepage = "https://github.com/kenjisato/coursemap"
documentation = "https://docs.rs/coursemap"
readme = "README.md"
keywords = ["quarto", "markdown", "course", "dependency", "visualization"]
categories = ["command-line-utilities", "visualization", "education"]

[lib]
name = "coursemap"
path = "src/lib.rs"

[[bin]]
name = "coursemap"
path = "src/main.rs"

[dependencies]
coursemap-core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
tempfile = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
