[package]
name = "coursemap"
version = "0.1.5"
edition = "2021"
description = "A tool to visualize course dependencies from Quarto/Markdown documents"
authors = ["Kenji Sato <mail@kenjisato.jp>"]
license = "MIT"
repository = "https://github.com/kenjisato/coursemap"
homepage = "https://github.com/kenjisato/coursemap"
documentation = "https://docs.rs/coursemap"
readme = "../README.md"
keywords = ["quarto", "markdown", "course", "dependency", "visualization"]
categories = ["command-line-utilities", "visualization"]

[lib]
name = "coursemap"
path = "src/lib.rs"

[[bin]]
name = "coursemap"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger"]

[dependencies]
# CLI-only dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
env_logger = { version = "0.10", optional = true }

# Core library dependencies (always included)
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
gray_matter = "0.2"
petgraph = "0.6"
walkdir = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
