[package]
name = 'coursemap-r-bindings'
publish = false
version = '0.1.5'
edition = '2021'
rust-version = '1.88'

[lib]
crate-type = ['staticlib']
name = 'coursemap'

[dependencies]
extendr-api = '*'
coursemap = { path = "./vendor/coursemap", default-features = false }
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
